@@ -250,6 +250,8 @@ Unreleased changes (1.0-dev)
 
 91. NUTCH-596 - ParseSegments parse content even if its not
     CrawlDatum.STATUS_FETCH_SUCCESS (dogacan)
+    
+92. NUTCH-618 - Tika error "Media type alias already exists" (mattmann,kubes)
 
 Release 0.9 - 2007-04-02
 
